# mimikopi-cli

./: .git-cz.json  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
.devcontainer/: devcontainer.json
lib/spleeter/: spleeter-2.3.3b0-py3-none-any.whl
mimikopi_cli/: app.py  main.py
mimikopi_cli/lib/: downloder.py  splitter.py
mimikopi_cli/utils/: id.py  logger.py
