[tool.poetry]
name = "mimikopi-cli"
version = "0.1.0"
description = ""
authors = ["yona3 <yonajs208@gmail.com>"]
readme = "README.md"
packages = [{include = "mimikopi_cli"}]

[tool.poetry.scripts]
mimikopi = "mimikopi_cli.main:main"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
