[tool.poetry]
name = "mimikopi-cli"
version = "0.1.0"
description = ""
authors = ["yona3 <yonajs208@gmail.com>"]
readme = "README.md"
packages = [{include = "mimikopi_cli"}]

[tool.poetry.scripts]
mimikopi = "mimikopi_cli.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fire = "^0.5.0"
spleeter = {path = "lib/spleeter/spleeter-2.3.3b0-py3-none-any.whl"}
shortuuid = "^1.0.11"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = "<21.4b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
